--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
 
 </head>
 <body>
-    
+    <!-- banner staction -->
+    <section class="w-[100%] h-[100vh] bg-[url('home.jpg')] bg-center bg-cover">
+
+        <div class="w-[100%] h-[100vh] bg-[rgba(0,0,0,0.5)]">
+            <header class="max-w-[1170px] mx-auto">
+                <div class="grid  sm:grid-cols-2 grid-cols-[30%_auto] px-[10px] py-[10px]">
+                    <figure>
+                        <img src="logo.png" class="w-[140px]">
+                    </figure>
+                    <div>
+                        <div></div>
+                        <button></button>
+                    </div>
+                </div>
+            </header>
+        </div>
+
+    </section>
+
+
+    <!-- banner end -->
+
 </body>
 </html>
